[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Game_Main/Interface/Scripts/Inventory.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Game_Main/gfx/equipment_overlay.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Game_Main/Interface/body_part.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Game_Main/Interface/equipment_slot.tscn" type="PackedScene" id=4]

[node name="Inventory" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="body_part" parent="." instance=ExtResource( 3 )]

[node name="slot0" parent="body_part" instance=ExtResource( 4 )]
position = Vector2( 141.828, 4.43213 )

[node name="slot1" parent="body_part" instance=ExtResource( 4 )]
position = Vector2( 222.714, 4.43213 )
